<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IntroduccionAndroid</string>
    <string name="app_title">Gestión de Residuos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_desconectar">Desconectar</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="button1">Entrar</string>
    <string name="title_activity_user_type">Tipo de Usuario</string>
    <string name="cif">CIF</string>
    <string name="nif">NIF</string>
    <string name="int_cif">Introduzca el CIF</string>
    <string name="citizen">Ciudadano</string>
    <string name="company">Empresa</string>
    <string name="title_activity_company_data1">Datos de la empresa</string>
    <string name="button_deposito">Iniciar depósito</string>
    <string name="companyname">Nombre empresa</string>
    <string name="phone">555–34323423</string>
    <string name="email">email@empresa</string>
    <string name="web">http://empresa.com</string>
    <string name="button_siguiente">Siguiente</string>
    <string name="button_call">Llamar</string>
    <string name="button_send">Enviar</string>
    <string name="button_open">Abrir</string>
    <string name="info_dom">Ver información dominio</string>
    <string name="title_activity_company_data2">Depositante</string>
    <string name="deposer">Depositante</string>
    <string name="cifData2">20432134X</string>
    <string name="ITMaterial">Material informático</string>
    <string name="Fridge">Neveras</string>
    <string name="Oil">Aceites usados</string>
    <string name="button_deposite">Depositar</string>
    <string name="totalweight">Peso total:</string>
    <string name="kg">Kg.</string>
    <string name="currency">€</string>
    <string name="title_activity_result">Resultados</string>
    <string name="cost">Coste</string>
    <string name="button_sendbymail">Enviar por email</string>
    <string name="button_reg_dep">Registrar depósito</string>
    <string name="dep_result">Depósito en Punto Limpio:</string>
    <string name="asunto_email_result">Factura</string>
    <string name="body_email_result">El coste de su deposito asciende a </string>
    <string name="title_activity_selection_place">SelectionPlaceActivity</string>
    <string name="urlimagen">http://www.restauranteateneo.es/sites/all/themes/ateneo/images/bus.png</string>
    <string name="title_activity_info_dom">Datos dominio de la empresa</string>
    <string name="infodom_ip">Direccion IP:</string>
    <string name="infodom_pais">País:</string>
    <string name="infodom_localizacion">Localidad:</string>
    <string name="infodom_coordenadas">Coordenadas:</string>
    <string name="textSalir">¿Desea cerrar sesión?</string>
    <string name="button_edit">Editar</string>
    <string name="date_text">Fecha de cobro:</string>
    <string name="end_toast">Depósito registrado</string>
    <string name="bad_login">Inicio de sesión incorrecto, revise los datos introducidos</string>



    <string-array name="sectores_array">
        <item>Automoción</item>
        <item>Servicios</item>
        <item>Informática</item>
        <item>Sanidad</item>
        <item>Residuos Peligrosos</item>
    </string-array>



</resources>
