<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffdcdcdc">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="fill_parent">

    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">



        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/title_activity_company_data1"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/textCIFCData1"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="20dp"
            android:hint="@string/cif"/>
        <EditText
            android:id="@+id/textCNameCData1"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="20dp"
            android:hint="@string/companyname"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="58dp"
            android:paddingTop="20dp">

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:hint="@string/phone"
                android:id="@+id/textPhoneCData1"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/buttonPhoneCData1"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/button_call"
                android:enabled="false"
                android:layout_gravity="center" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="58dp"
            android:paddingTop="20dp">

            <EditText
                android:id="@+id/textEmailCData1"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:hint="@string/email"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/buttonEmailCData1"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/button_send"
                android:enabled="false"
                android:layout_gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="58dp"
            android:paddingTop="20dp">

            <EditText
                android:id="@+id/textWebCData1"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:hint="@string/web"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/buttonWebCData1"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/button_open"
                android:enabled="false"
                android:layout_gravity="center" />
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_dom"
            android:id="@+id/info_dom"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"
            android:enabled="false"
            android:onClick="siguiente"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_siguiente"
            android:id="@+id/button_siguiente"
            android:layout_gravity="right"
            android:enabled="false"
            android:onClick="siguiente"/>

    </LinearLayout>
</ScrollView>

</FrameLayout>
