<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffdcdcdc">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="fill_parent">
    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/dep_result"
            android:textSize="18sp"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:id="@+id/result_Place"
            android:textSize="18sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/deposer"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="23489454P"
            android:id="@+id/result_CIF"
            android:textSize="18sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/result_x_residuos"
            android:text="1 residuo depositado: "/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="Material Informático"
            android:id="@+id/result_tipo_residuo"
            android:textSize="18sp"/>


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/result_cost_text"
            android:text="@string/cost"
            android:visibility="invisible"/>


        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/GridResult"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="89 Kg. * 2,5€/Kg"
                android:id="@+id/textDataResult"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="222,5€"
                android:id="@+id/NumberDataResult"
                android:layout_row="0"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IVA(20%)"
                android:id="@+id/IVA"
                android:layout_row="1"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="44,5€"
                android:id="@+id/TextIVAResult"
                android:layout_row="1"
                android:layout_column="2" />
            </GridLayout>

            <View
                android:background="#000000"
                android:visibility="invisible"
                android:id="@+id/Linea"
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>


        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/GridResult2"
            android:visibility="invisible">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total"
                android:id="@+id/total"
                android:layout_row="4"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="44,5€"
                android:id="@+id/TextTotalResult"
                android:layout_row="4"
                android:layout_column="2" />
            </GridLayout>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/date_text"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:hint="22/02/2013"
                android:id="@+id/textDateCData"/>

            <Button
                android:id="@+id/buttonDate"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button_edit"/>
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sendbymail"
            android:id="@+id/button_sendbymail"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/email"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_reg_dep"
            android:id="@+id/button_reg_dep"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"/>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
