<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffdcdcdc">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="fill_parent">

        <LinearLayout
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/title_activity_info_dom"/>


            <EditText
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:id="@+id/info_dom_url"
                android:text="http://google.es"
                android:editable="false"/>
            <GridLayout
                android:layout_height="fill_parent"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/infodom_ip"
                    android:layout_row="0"
                    android:layout_column="0"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/info_dom_ip"
                    android:text="127.0.0.1"
                    android:layout_marginLeft="10dp"
                    android:layout_row="0"
                    android:layout_column="1"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/infodom_pais"
                    android:layout_row="1"
                    android:layout_column="0"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/info_dom_country"
                    android:text="España(ES)"
                    android:layout_marginLeft="10dp"
                    android:layout_row="1"
                    android:layout_column="1"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/infodom_localizacion"
                    android:layout_row="2"
                    android:layout_column="0"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/info_dom_city"
                    android:text="Zaragoza"
                    android:layout_marginLeft="10dp"
                    android:layout_row="2"
                    android:layout_column="1"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/infodom_coordenadas"
                    android:layout_row="3"
                    android:layout_column="0"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/info_dom_gps"
                    android:text="37.4345, -122.0830"
                    android:layout_marginLeft="10dp"
                    android:layout_row="3"
                    android:layout_column="1"/>

                </GridLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
